--- a/dancefloor.html
+++ b/dancefloor.html
@@ -4,17 +4,27 @@
     <title>Object Dance Party</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
-    <script src="src/dancer.js"></script>
-    <script src="src/blinkyDancer.js"></script>
-    <script src="src/bouncer.js"></script>
-    <script src="src/slider.js"></script>
+
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="Bouncer">add a Bouncer dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="Slider">add a Slider dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="Slider">add a Slider dancer</a>
+      <a href="#" class="hide" >hide</a>
+      <a href="#" class="lineUp" >LineUp Dancers</a>
+      <a href="#" class="Pairing" >Pairing</a>
+      <audio controls autoplay id="controler">
+        <source src="lose.mp3" type="audio/mpeg" id = "musicIn">
+      </audio>
+
+     </div>
+
     <script src="src/init.js"></script>
+    <script src="src/dancer.js"></script>
+    <script src="src/blinkyDancer.js"></script>
+    <script src="src/bouncer.js"></script>
+    <script src="src/slider.js"></script>
   </body>
 </html>
